# argeo-jjml

./: .gitmodules  .project  CMakeLists.txt  Makefile  NOTICE  README.md
jni/: .cproject  .gitignore  .project  CMakeLists.txt  generate-headers.sh
jni/include/argeo/: argeo_jni.h
jni/include/argeo/jni/: argeo_jni.h  argeo_jni_encoding.h
jni/include/org_argeo_jjml/: org_argeo_jjml_llama_LlamaCppContext.h  org_argeo_jjml_llama_LlamaCppNativeSampler.h
jni/org_argeo_jjml_llama/: CMakeLists.txt  argeo_jni_utils.h  jjml_llama.cpp  jjml_llama.h  jjml_llama_batch.cpp  jjml_llama_batch_read.cpp  jjml_llama_batch_write.cpp  jjml_llama_context.cpp  jjml_llama_embedding.cpp  jjml_llama_jni.h  jjml_llama_model.cpp  jjml_llama_sampling.cpp  jjml_llama_vocabulary.cpp  org_argeo_jjml_llama_.cpp  org_argeo_jjml_llama_.h  org_argeo_jjml_llama_LlamaCppBackend.h  org_argeo_jjml_llama_LlamaCppBatchProcessor.h  org_argeo_jjml_llama_LlamaCppContext.h  org_argeo_jjml_llama_LlamaCppEmbeddingProcessor.h  org_argeo_jjml_llama_LlamaCppModel.h  org_argeo_jjml_llama_LlamaCppNative.h  org_argeo_jjml_llama_LlamaCppNativeSampler.h  org_argeo_jjml_llama_LlamaCppSamplerChain.h  org_argeo_jjml_llama_LlamaCppSamplers.h  org_argeo_jjml_llama_LlamaCppVocabulary.h
native/: .cproject  .project  CMakeLists.txt
native/include/: .gitignore
native/include/argeo/jni/: argeo_jni.h  argeo_jni_encoding.h
native/org_argeo_jjml_ggml/: CMakeLists.txt  jjml_ggml_backend.cpp
native/org_argeo_jjml_llama/: CMakeLists.txt  jjml_llama.cpp  jjml_llama_batch_read.cpp  jjml_llama_batch_write.cpp  jjml_llama_context.cpp  jjml_llama_embedding.cpp  jjml_llama_model.cpp  jjml_llama_sampling.cpp  jjml_llama_vocabulary.cpp
org.argeo.jjml/: .classpath  .gitignore  .project  bnd.bnd
org.argeo.jjml.llama/: .project
org.argeo.jjml.llama/src/: module-info.java
org.argeo.jjml.llama/src/org/argeo/jjml/ggml/: GgmlNumaStrategy.java
org.argeo.jjml.llama/src/org/argeo/jjml/llama/: LlamaCppBackend.java  LlamaCppBatchProcessor.java  LlamaCppContext.java  LlamaCppModel.java  LlamaCppPoolingType.java  LlamaCppTokenList.java  Main.java
org.argeo.jjml/src/: module-info.java
org.argeo.jjml/src/org/argeo/jjml/ggml/: GgmlBackend.java  GgmlNumaStrategy.java  GgmlType.java  StandardBackend.java
org.argeo.jjml/src/org/argeo/jjml/ggml/params/: GgmlType.java  NumaStrategy.java
org.argeo.jjml/src/org/argeo/jjml/llama/: A2SmokeTests.java  LlamaCppAttentionType.java  LlamaCppBackend.java  LlamaCppBatchProcessor.java  LlamaCppChatMessage.java  LlamaCppContext.java  LlamaCppContextParams.java  LlamaCppEmbedding.java  LlamaCppEmbeddingProcessor.java  LlamaCppJavaSampler.java  LlamaCppModel.java  LlamaCppModelParams.java  LlamaCppNative.java  LlamaCppNativeSampler.java  LlamaCppPoolingType.java  LlamaCppRopeScalingType.java  LlamaCppSamplerChain.java  LlamaCppSamplers.java  LlamaCppTokenList.java  LlamaCppVocabulary.java  NativeReference.java
org.argeo.jjml/src/org/argeo/jjml/llama/params/: AttentionType.java  ContextParam.java  ContextParamName.java  ContextParams.java  DefaultSamplerChainParams.java  LlamaCppAttentionType.java  LlamaCppPoolingType.java  LlamaCppRopeScalingType.java  ModelParam.java  ModelParamName.java  ModelParams.java  PoolingType.java  RopeScalingType.java
org.argeo.jjml/src/org/argeo/jjml/llama/util/: SimpleChat.java  SimpleChatHttpServer.java  SimpleCli.java  SimpleEmbedding.java  StandardRole.java
sdk/tp/native/: .cproject  .project  CMakeLists.txt
